# ClawBrowser

./: .gitignore  AGENTS.md  LICENSE  README.md  blank.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
coverage/: index.html  lcov.info
coverage/lcov-report/: index.html
coverage/src/: index.html  main.ts.html
docs/: API_CONTRACT.md  DOM_AUTOMATION.md  index.html  openclaw-telegram-channel.md
docs/ops/: browser-automation-baseline.json  browser-automation-report.md
docs/plans/: 2026-02-17-clawbrowser-full-implementation.md  2026-02-18-agent-full-control-design.md  2026-02-18-agent-full-control-plan.md  2026-02-18-agent-panel-fixed-open-design.md  2026-02-18-agent-tab-control-design.md  2026-02-18-agent-tab-control-plan.md  2026-02-18-agent-task-planner-design.md  2026-02-18-agent-task-planner-implementation.md  2026-02-18-clawbrowser-security-hardening.md  2026-02-18-cmd-click-new-tab-design.md  2026-02-18-dev-logs-local-dir-design.md  (+33 more)
log/: 2026-02-21.md  2026-02-23.md  2026-02-24.md  2026-02-28.md
scripts/: build.sh
sidecar/: main.ts  package-lock.json  package.json  tsconfig.json
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: clawbrowser-agent-aarch64-apple-darwin  clawbrowser-agent-dev-aarch64-apple-darwin
src-tauri/src/: devtools.rs  ipc.rs  lib.rs  logger.rs  main.rs  sidecar.rs  tabs.rs
workspace-template/: AGENTS.md  BOOT.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
(+227 files in other folders)
