[package]
name = "clawbrowser"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
