[package]
name = "clawbrowser"
version = "0.1.0"
edition = "2021"

[features]
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
url = "2"
log = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-web-kit = "0.3.2"
